--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.js",
-    "dev": "webpack-dev-server --config webpack.common.js --watch"
+    "build": "webpack --config webpack.prod.js --openssl-legacy-provider start",
+    "dev": "webpack-dev-server --config webpack.common.js --watch --openssl-legacy-provider start"
   },
   "author": "",
   "license": "ISC",
